--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.454.0",
     "next": "^14.2.11",
     "next-intl": "^3.23.5",
